Add TouchesView, quick hacky demo for Keyboard/Trackpad modes